production/tools/tests/gaiat/arrays_test02.ruleset
////////////////////////////////////////////////////
// Copyright (c) Gaia Platform Authors
//
// Use of this source code is governed by the MIT
// license that can be found in the LICENSE.txt file
// or at https://opensource.org/licenses/MIT.
////////////////////////////////////////////////////

// RUN: not %gaiat %s -- 2>&1| FileCheck  %s

// TESTCASE: treat scalar array as a struct
ruleset test02
{
    on_insert(farmer)
    {
        previous_years[bushels].bad_field = 1;
    }
}

// CHECK: error: member reference base type 'unsigned int' is not a structure or union
